Deleted employee entity

--- a/pom.xml
+++ b/pom.xml
@@ -523,10 +523,10 @@
                     <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
                     <diffChangeLogFile>src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                     <driver>org.postgresql.Driver</driver>
-                    <url>jdbc:postgresql://localhost:5432/skynet</url>
+                    <url>jdbc:postgresql://localhost:5432/Skynet</url>
                     <defaultSchemaName></defaultSchemaName>
-                    <username>skynet</username>
-                    <password></password>
+                    <username>postgres</username>
+                    <password>hola</password>
                     <referenceUrl>hibernate:spring:com.pernix_central.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.ejb.naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
